--- a/src/styles.css
+++ b/src/styles.css
@@ -77,7 +77,7 @@ button:active {
     padding: 20px;
 }
 
-#theme {
+#theme, #text_intro, #text_contact, #contacts {
     white-space: pre-line;
     font-size: 20px;
     padding: 20px 110px;
@@ -108,4 +108,24 @@ button:active {
     /* border: solid 5px purple; */
     margin: 20px 100px;
     line-height: 30px;
+}
+
+
+.menu_piece {
+    font-size: 20px;
+    padding: 5px 110px;
+}
+
+.menu_piece > h3 {
+    margin: 5px 0px;
+    padding-top: 20px;
+    color: rgb(100, 2, 100);
+    text-align: center;
+    border-top: purple dashed 1px;
+    font-size: 26px;
+}
+
+.menu_piece > ul {
+    padding: 0px 0px 0px 90px;
+    font-size: 18px;
 }
